# etl-data-quality-em-python

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  cy.yml
data/: customers.csv
output/: report.xslx
outputs/: sample_data_quality_report.xlsx
sample_data/: customers.csv
src/etl_data_quality.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/etl_dq/: cli.py  models.py  pipeline.py  reporting.py  rules.py
tests/: test_rules_and_pipeline.py
